--- a/src/component/barraredes/barraRedes.scss
+++ b/src/component/barraredes/barraRedes.scss
@@ -5,29 +5,30 @@
 
 .contenedor {
   ul {
-    margin-left: 0px;
+    margin-right: 0px;
     width: 70%;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
     cursor: pointer;
     position: fixed;
     top: 50%;
-    left: -15px;
+    right: 0px;
     z-index: 1000;
   }
 
   li {
     position: relative;
-    transform: translateX(-90px);
+    transform: translateX(110px);
     background: rgba(0, 0, 0, 0.8);
     list-style: none;
-    padding: 10px, 0;
+    padding: 0, 10px;
     margin: 8px 0;
     transition: 0.5s;
-    width: 150px;
-    border-radius: 0 200px 200px 0;
+    width: 170px;
+    border-radius: 200px 0px 0px 200px;
+    height: 62px;
   }
 
   // li:nth-child(1) {
@@ -65,35 +66,35 @@
     color: #fff;
     font-family: sans-serif;
     text-decoration: none;
-    padding-left: 25px;
-    // font-weight: bold;
+    // padding-right: 25px;
+    font-weight: bold;
   }
 
   i {
-    margin-left: 15px;
+    margin-right: 15px;
     padding: 10px 10px;
-    border-radius: 50%;
+    border-radius: 20%;
     background-color: #f1ecec;
   }
 
   .iconBarra {
     position: relative;
-    font-size: 25px;
+    font-size: 40px;
   }
 
   .insta {
     position: relative;
 
-    left: 21px;
+    right: 16px;
   }
   .whatsa {
     position: relative;
 
-    left: 21px;
+    right: 16px;
   }
   .faceb {
     position: relative;
 
-    left: 21px;
+    right: 19px;
   }
 }
