--- a/src/component/nosotros/nosotros.scss
+++ b/src/component/nosotros/nosotros.scss
@@ -3,6 +3,7 @@
   width: 100vw;
   margin: auto;
   padding: 0;
+
   img {
     width: 30vw;
     display: flex;
@@ -25,7 +26,7 @@
     height: 3.5rem;
     width: 8rem;
     margin: 2rem;
-    background: rgb(255, 0, 128);
+    background: rgba(23, 200, 224, 0.986);
     color: white;
     font-weight: 600;
     font-size: 1.2rem;
