--- a/src/component/Navabar/_Navbar.scss
+++ b/src/component/Navabar/_Navbar.scss
@@ -172,7 +172,6 @@
     color: rgb(255, 255, 255);
     font-weight: 600;
     font-size: 0.8rem;
-    transition-duration: 0.6s;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     border-radius: 5px;
     border: 4px solid rgb(211, 206, 206);
@@ -180,16 +179,16 @@
   }
 
   .link:hover {
-    height: 3.5rem;
-    margin: 4rem 0.3rem 4rem 0.1rem;
-    background: rgba(224, 144, 23, 0.815);
+    height: 3rem;
+    margin: 5px;
+    background: rgb(247, 158, 85);
     color: rgb(255, 255, 255);
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     transition-duration: 0.6s;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     border-radius: 5px;
-    border: 4px solid rgb(211, 206, 206);
+    border: 2px solid rgb(211, 206, 206);
   }
 
   .link--active {
