--- a/src/component/barraredes/barraRedes.scss
+++ b/src/component/barraredes/barraRedes.scss
@@ -3,10 +3,10 @@
   padding: 0;
 }
 
-.contenedor {
+.contenedor-barra {
   ul {
     margin-right: 0px;
-    width: 70%;
+    width: auto;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -29,6 +29,7 @@
     width: 170px;
     border-radius: 200px 0px 0px 200px;
     height: 62px;
+    z-index: 500;
   }
 
   // li:nth-child(1) {
@@ -96,5 +97,104 @@
     position: relative;
 
     right: 19px;
+  }
+}
+
+@media (max-width: 600.98px) {
+  .contenedor-barra {
+    ul {
+      margin-right: 0px;
+      width: 4.5rem;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      cursor: pointer;
+      position: fixed;
+      top: 50%;
+      right: 0px;
+      z-index: 1000;
+    }
+
+    li {
+      position: relative;
+      background: rgba(0, 0, 0, 0.8);
+      list-style: none;
+      padding: 0, 10px;
+      margin: 8px 0;
+      width: 170px;
+      border-radius: 200px 0px 0px 200px;
+      height: 62px;
+      z-index: 500;
+      transform: translateX(110px);
+      transition: 0.5s;
+    }
+
+    // li:nth-child(1) {
+    //   background: #fe180d;
+    // }
+    // li:nth-child(2) {
+    //   background: #3cc706;
+    // }
+    // li:nth-child(3) {
+    //   background: #47b6f5;
+    // }
+
+    li:hover:nth-child(1) {
+      background: #fe180d;
+    }
+    li:hover:nth-child(2) {
+      background: #3cc706;
+    }
+    li:hover:nth-child(3) {
+      background: #47b6f5;
+    }
+
+    li:hover {
+      transform: translateX(110px);
+    }
+
+    a {
+      color: #fff;
+      font-family: sans-serif;
+      text-decoration: none;
+      padding-left: 15px;
+    }
+
+    a:hover {
+      color: #fff;
+      font-family: sans-serif;
+      text-decoration: none;
+      // padding-right: 25px;
+      font-weight: bold;
+    }
+
+    i {
+      margin-right: 15px;
+      padding: 10px 10px;
+      border-radius: 20%;
+      background-color: #f1ecec;
+    }
+
+    .iconBarra {
+      position: relative;
+      font-size: 40px;
+    }
+
+    .insta {
+      position: relative;
+
+      right: 16px;
+    }
+    .whatsa {
+      position: relative;
+
+      right: 16px;
+    }
+    .faceb {
+      position: relative;
+
+      right: 19px;
+    }
   }
 }
