--- a/src/component/footer/_footer.scss
+++ b/src/component/footer/_footer.scss
@@ -53,9 +53,9 @@
 .seccion__footer-2 p {
   line-height: 2rem;
   height: auto;
-  font-weight: 900;
-  font-size: 1em;
+  font-size: 1.5em;
   margin: 0;
+  font-weight: 900;
 }
 
 .corection {
@@ -86,6 +86,10 @@
 
 .icon-footer {
   width: 30px;
+}
+
+.section-text {
+  padding: 1rem;
 }
 
 .redContainer {
