--- a/src/component/barraredes/barraRedes.scss
+++ b/src/component/barraredes/barraRedes.scss
@@ -21,35 +21,47 @@
   li {
     position: relative;
     transform: translateX(110px);
-    background: rgba(0, 0, 0, 0.8);
+    background: rgb(255, 255, 255);
     list-style: none;
     padding: 0, 10px;
-    margin: 8px 0;
     transition: 0.5s;
     width: 170px;
-    border-radius: 200px 0px 0px 200px;
+    border-radius: 0px 0px 0px 0px;
     height: 62px;
     z-index: 500;
+    border-top: 1px solid rgb(255, 255, 255);
+    border-left: 1px solid rgb(255, 255, 255);
+    filter: drop-shadow(4px 4px 10px rgba(255, 255, 255, 0.671));
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+      rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
   }
-
-  // li:nth-child(1) {
-  //   background: #fe180d;
-  // }
-  // li:nth-child(2) {
-  //   background: #3cc706;
-  // }
-  // li:nth-child(3) {
-  //   background: #47b6f5;
-  // }
+  li:nth-child(1) {
+    background: rgb(255, 1, 1);
+    border-radius: 20px 0px 0px 0px;
+  }
+  li:nth-child(2) {
+    background: rgb(115, 255, 0);
+  }
+  li:nth-child(3) {
+    background: rgb(0, 4, 255);
+    border-radius: 0px 0px 0px 20px;
+  }
 
   li:hover:nth-child(1) {
-    background: #fe180d;
+    background: #ff4a40;
+    border-bottom: 1px solid rgb(255, 255, 255);
   }
   li:hover:nth-child(2) {
-    background: #3cc706;
+    background: #6ad142;
+    border-bottom: 1px solid rgb(255, 255, 255);
   }
   li:hover:nth-child(3) {
     background: #47b6f5;
+    border-bottom: 1px solid rgb(255, 255, 255);
   }
 
   li:hover {
@@ -57,25 +69,23 @@
   }
 
   a {
-    color: #fff;
+    color: #ffffff;
     font-family: sans-serif;
     text-decoration: none;
     padding-left: 15px;
   }
 
   a:hover {
-    color: #fff;
+    color: #ffffff;
     font-family: sans-serif;
     text-decoration: none;
-    // padding-right: 25px;
-    font-weight: bold;
   }
 
   i {
     margin-right: 15px;
     padding: 10px 10px;
-    border-radius: 20%;
-    background-color: #f1ecec;
+    border-radius: 10%;
+    background-color: none;
   }
 
   .iconBarra {
@@ -85,18 +95,23 @@
 
   .insta {
     position: relative;
-
     right: 16px;
+    color: #ffffff;
   }
   .whatsa {
     position: relative;
-
     right: 16px;
+    color: #ffffff;
   }
   .faceb {
     position: relative;
-
     right: 19px;
+    color: #ffffff;
+  }
+
+  .iconBarra {
+    position: relative;
+    font-size: 40px;
   }
 }
 
@@ -104,7 +119,7 @@
   .contenedor-barra {
     ul {
       margin-right: 0px;
-      width: 4.5rem;
+      width: auto;
       overflow: hidden;
       display: flex;
       flex-direction: column;
@@ -118,62 +133,72 @@
 
     li {
       position: relative;
-      background: rgba(0, 0, 0, 0.8);
+      transform: translateX(110px);
+      background: rgb(255, 255, 255);
       list-style: none;
       padding: 0, 10px;
-      margin: 8px 0;
-      width: 170px;
-      border-radius: 200px 0px 0px 200px;
+      transition: 0.5s;
+      width: 160px;
+      border-radius: 0px 0px 0px 0px;
       height: 62px;
       z-index: 500;
-      transform: translateX(110px);
-      transition: 0.5s;
+      border-top: 1px solid rgb(255, 255, 255);
+      border-left: 1px solid rgb(255, 255, 255);
+      filter: drop-shadow(4px 4px 10px rgba(255, 255, 255, 0.671));
+      box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+        rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+        rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+        rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+        rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+        rgba(0, 0, 0, 0.09) 0px 32px 16px;
     }
-
-    // li:nth-child(1) {
-    //   background: #fe180d;
-    // }
-    // li:nth-child(2) {
-    //   background: #3cc706;
-    // }
-    // li:nth-child(3) {
-    //   background: #47b6f5;
-    // }
+    li:nth-child(1) {
+      background: rgb(255, 1, 1);
+      border-radius: 20px 0px 0px 0px;
+    }
+    li:nth-child(2) {
+      background: rgb(115, 255, 0);
+    }
+    li:nth-child(3) {
+      background: rgb(0, 4, 255);
+      border-radius: 0px 0px 0px 20px;
+    }
 
     li:hover:nth-child(1) {
-      background: #fe180d;
+      background: #ff4a40;
+      border-bottom: 1px solid rgb(255, 255, 255);
     }
     li:hover:nth-child(2) {
-      background: #3cc706;
+      background: #6ad142;
+      border-bottom: 1px solid rgb(255, 255, 255);
     }
     li:hover:nth-child(3) {
       background: #47b6f5;
+      border-bottom: 1px solid rgb(255, 255, 255);
     }
 
     li:hover {
-      transform: translateX(110px);
+      transform: translateX(0);
     }
 
     a {
-      color: #fff;
+      color: #ffffff;
       font-family: sans-serif;
       text-decoration: none;
       padding-left: 15px;
     }
 
     a:hover {
-      color: #fff;
+      color: #ffffff;
       font-family: sans-serif;
       text-decoration: none;
-      // padding-right: 25px;
-      font-weight: bold;
     }
 
     i {
       margin-right: 15px;
       padding: 10px 10px;
-      border-radius: 20%;
-      background-color: #f1ecec;
+      border-radius: 10%;
+      background-color: none;
     }
 
     .iconBarra {
@@ -183,18 +208,23 @@
 
     .insta {
       position: relative;
-
       right: 16px;
+      color: #ffffff;
     }
     .whatsa {
       position: relative;
-
       right: 16px;
+      color: #ffffff;
     }
     .faceb {
       position: relative;
-
       right: 19px;
+      color: #ffffff;
+    }
+
+    .iconBarra {
+      position: relative;
+      font-size: 40px;
     }
   }
 }
