--- a/src/component/header/_header.scss
+++ b/src/component/header/_header.scss
@@ -28,8 +28,8 @@ header {
   height: 20px;
   top: 39% !important;
   left: 6%;
-  z-index: 1;
-  height: 50px;
+  height: 100px;
+  overflow: hidden;
 }
 
 .hero__main h1 {
