--- a/src/component/barraredes/barraRedes.scss
+++ b/src/component/barraredes/barraRedes.scss
@@ -29,8 +29,8 @@
     border-radius: 0px 0px 0px 0px;
     height: 62px;
     z-index: 500;
-    border-top: 1px solid rgb(255, 255, 255);
-    border-left: 1px solid rgb(255, 255, 255);
+    // border-top: 1px solid rgb(255, 255, 255);
+    // border-left: 1px solid rgb(255, 255, 255);
     filter: drop-shadow(4px 4px 10px rgba(255, 255, 255, 0.671));
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
       rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
