--- a/src/component/Navabar/_Navbar.scss
+++ b/src/component/Navabar/_Navbar.scss
@@ -1,8 +1,54 @@
 .container {
-  width: 95%;
+  width: 100vw;
   margin: 0 auto;
   overflow: hidden;
   height: auto;
+}
+
+aside {
+  position: fixed;
+  width: auto;
+  z-index: 1000;
+  transform: translateX(-37rem);
+  transition: all 0.5s ease-in-out;
+}
+
+aside.open {
+  transform: translateX(0);
+}
+
+.open-sidebar {
+  border: none;
+  width: 100%;
+  height: auto;
+  font-size: 4vw;
+  padding: 1rem;
+  background: none;
+  cursor: pointer;
+  z-index: 1000;
+  margin: 1.5rem;
+}
+
+.open-sidebar:hover {
+  border: none;
+  color: rgb(146, 139, 139);
+}
+
+aside ul {
+  padding: 0;
+  list-style: none;
+}
+
+// aside li {
+//   display: flex;
+//   justify-content: space-between;
+//   padding: 1rem;
+// }
+
+.close-sidebar {
+  font-size: 1.6rem;
+  padding: 0.3rem 0.8rem;
+  cursor: pointer;
 }
 
 .nav__hero {
@@ -21,23 +67,21 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: inherit;
-  padding: 0.5rem;
 }
 
 .logo__navBar {
-  width: 50%;
+  width: 45%;
   height: auto;
-  padding: 0.5rem;
+  padding: 0.7rem;
 }
 
-.links {
-  margin-right: 5rem;
-}
+// .links {
+//   margin-right: 5rem;
+// }
 
-.categories {
-  flex-wrap: wrap;
-}
+// .categories {
+//   flex-wrap: wrap;
+// }
 
 .container-links {
   position: relative;
@@ -45,26 +89,28 @@
   align-items: center;
   align-items: center;
   flex-wrap: wrap;
+  padding: 2.2rem;
+  background-color: #f7f7f7;
+  margin-top: 0.5rem;
 }
 
 .link {
-  width: 140px;
+  width: 10rem;
   height: 3.5rem;
-  margin: 4rem 0.3rem 4rem 0.1rem;
-  background: rgba(23, 200, 224, 0.986);
+  background: rgb(5, 86, 153);
   color: rgb(255, 255, 255);
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 1.2rem;
   transition-duration: 0.6s;
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   border-radius: 5px;
-  border: 2px solid rgb(211, 206, 206);
+  border: 2.5px solid rgb(156, 154, 154);
+  margin: 0.15rem;
 }
 
 .link:hover {
   height: 3.5rem;
-  margin: 4rem 0.3rem 4rem 0.1rem;
-  background: rgb(247, 158, 85);
+  background: rgb(240, 128, 37);
   color: rgb(255, 255, 255);
   font-weight: 600;
   font-size: 1.2rem;
@@ -72,6 +118,7 @@
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   border-radius: 5px;
   border: 2px solid rgb(211, 206, 206);
+  cursor: pointer;
 }
 
 .title {
@@ -79,12 +126,6 @@
   font-size: 3vw;
   font-weight: 300;
   color: $black1;
-}
-
-.title--active {
-  color: rgb(199, 37, 37);
-  font-weight: 900;
-  text-shadow: $shadow $color_shadow;
 }
 
 .copy {
@@ -110,90 +151,31 @@
 
 // RESPONSIVE
 
-@media screen and (min-width: 300px) and (max-width: 666.98px) {
-  .links {
-    display: flex;
-    margin-right: 1rem;
-  }
-
-  .nav__container {
-    width: 100%;
-    height: 4rem;
-    background: rgba(255, 255, 255, 0.733);
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-  }
-
-  .title {
-    margin-top: 40%;
-    font-size: 3vw;
-    font-weight: 300;
-    color: $black1;
-  }
-
-  .title--active {
-    color: rgb(199, 37, 37);
-    font-weight: 900;
-    text-shadow: $shadow $color_shadow;
-  }
-
-  .copy {
-    font-size: 2.78vw;
-    color: $black1;
-    text-shadow: $shadow $color_shadow;
-    margin: 15px 0;
-  }
-
-  .copy__active {
-    font-weight: 700;
-  }
-
-  .categories {
-    background: rgb(243, 235, 235);
-    width: 100vw;
-    border-radius: 0.5rem;
-    position: relative;
-  }
-
+@media screen and (min-width: 270px) and (max-width: 600.98px) {
   .container-links {
-    margin-top: 50px;
+    width: 22rem;
+    height: 8rem;
     position: relative;
     display: flex;
     align-items: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0rem;
+    background-color: #f7f7f7;
+    margin-top: 2.8rem;
   }
 
   .link {
+    width: 6.1rem;
     height: 3rem;
-    width: 50vw;
-    background: rgba(23, 200, 224, 0.986);
+    background: rgb(5, 86, 153);
     color: rgb(255, 255, 255);
     font-weight: 600;
     font-size: 0.8rem;
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-    border-radius: 5px;
-    border: 4px solid rgb(211, 206, 206);
-    margin: 5px;
-  }
-
-  .link:hover {
-    height: 3rem;
-    margin: 5px;
-    background: rgb(247, 158, 85);
-    color: rgb(255, 255, 255);
-    font-weight: 600;
-    font-size: 1.2rem;
     transition-duration: 0.6s;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     border-radius: 5px;
-    border: 2px solid rgb(211, 206, 206);
-  }
-
-  .link--active {
-    color: $red;
-    font-weight: 900;
+    border: 2.5px solid rgb(156, 154, 154);
   }
 
   .close {
@@ -201,277 +183,8 @@
       font-size: 1.5rem;
       color: rgb(7, 7, 7);
       position: absolute;
-      top: -10px;
-      right: -10px;
+      top: 0;
+      right: 0;
     }
   }
 }
-
-// @media (max-width: 400.98px) {
-//   .links {
-//     display: flex;
-//     margin-right: 1rem;
-//   }
-
-//   .nav__container {
-//     width: 100%;
-//     height: 4rem;
-//     background: rgba(255, 255, 255, 0.733);
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     display: flex;
-//     align-items: center;
-//   }
-
-//   .title {
-//     margin-top: 40%;
-//     font-size: 3vw;
-//     font-weight: 300;
-//     color: $black1;
-//   }
-
-//   .title--active {
-//     color: rgb(199, 37, 37);
-//     font-weight: 900;
-//     text-shadow: $shadow $color_shadow;
-//   }
-
-//   .copy {
-//     font-size: 2.78vw;
-//     color: $black1;
-//     text-shadow: $shadow $color_shadow;
-//     margin: 15px 0;
-//   }
-
-//   .copy__active {
-//     font-weight: 700;
-//   }
-
-//   .categories {
-//     display: flex;
-//     align-items: center;
-//     background: rgb(243, 235, 235);
-//     width: 87vw;
-//     border-radius: 0.5rem;
-//   }
-
-//   .close {
-//     .close-sidebar {
-//       font-size: 1.5rem;
-//       color: rgb(7, 7, 7);
-//       margin-left: 8.5rem;
-//     }
-//   }
-
-//   .link {
-//     height: 3rem;
-//     width: 6rem;
-//     margin: 4rem 0.3rem 3rem 0.45rem;
-//     background: rgba(23, 200, 224, 0.986);
-//     color: rgb(255, 255, 255);
-//     font-weight: 600;
-//     font-size: 0.8rem;
-//     transition-duration: 0.6s;
-//     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-//     border-radius: 5px;
-//     border: 4px solid rgb(211, 206, 206);
-//   }
-
-//   .link:hover {
-//     height: 3.5rem;
-//     margin: 4rem 0.3rem 4rem 0.1rem;
-//     background: rgba(224, 144, 23, 0.815);
-//     color: rgb(255, 255, 255);
-//     font-weight: 600;
-//     font-size: 1.5rem;
-//     transition-duration: 0.6s;
-//     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-//     border-radius: 5px;
-//     border: 4px solid rgb(211, 206, 206);
-//   }
-
-//   .link--active {
-//     color: $red;
-//     font-weight: 900;
-//   }
-// }
-
-// @media screen and (min-width: 401px) and (max-width: 535.98px) {
-//   .links {
-//     display: flex;
-//     margin-right: 1rem;
-//   }
-
-//   .nav__container {
-//     width: 100%;
-//     height: 4rem;
-//     background: rgba(255, 255, 255, 0.733);
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     display: flex;
-//     align-items: center;
-//   }
-
-//   .title {
-//     margin-top: 40%;
-//     font-size: 3vw;
-//     font-weight: 300;
-//     color: $black1;
-//   }
-
-//   .title--active {
-//     color: rgb(199, 37, 37);
-//     font-weight: 900;
-//     text-shadow: $shadow $color_shadow;
-//   }
-
-//   .copy {
-//     font-size: 2.78vw;
-//     color: $black1;
-//     text-shadow: $shadow $color_shadow;
-//     margin: 15px 0;
-//   }
-
-//   .copy__active {
-//     font-weight: 700;
-//   }
-
-//   .categories {
-//     display: flex;
-//     align-items: center;
-//     background: rgb(243, 235, 235);
-//     width: 100vw;
-//     border-radius: 0.5rem;
-//   }
-
-//   .close {
-//     .close-sidebar {
-//       font-size: 1.5rem;
-//       color: rgb(7, 7, 7);
-//       margin-left: 7rem;
-//     }
-//   }
-
-//   .link {
-//     height: 3rem;
-//     width: 6rem;
-//     margin: 4rem 0.3rem 3rem 0.45rem;
-//     background: rgba(23, 200, 224, 0.986);
-//     color: rgb(255, 255, 255);
-//     font-weight: 600;
-//     font-size: 0.8rem;
-//     transition-duration: 0.6s;
-//     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-//     border-radius: 5px;
-//     border: 4px solid rgb(211, 206, 206);
-//   }
-
-//   .link:hover {
-//     height: 3.5rem;
-//     margin: 4rem 0.3rem 4rem 0.1rem;
-//     background: rgba(224, 144, 23, 0.815);
-//     color: rgb(255, 255, 255);
-//     font-weight: 600;
-//     font-size: 1.5rem;
-//     transition-duration: 0.6s;
-//     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-//     border-radius: 5px;
-//     border: 4px solid rgb(211, 206, 206);
-//   }
-
-//   .link--active {
-//     color: $red;
-//     font-weight: 900;
-//   }
-// }
-
-// @media screen and (min-width: 536px) and (max-width: 577.8px) {
-//   .nav__container {
-//     width: 100%;
-//     height: auto;
-//     background: rgba(255, 255, 255, 0.733);
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     height: inherit;
-//     padding: 0;
-//   }
-
-//   .title {
-//     margin-top: 40%;
-//     font-size: 3vw;
-//     font-weight: 300;
-//     color: $black1;
-//   }
-
-//   .title--active {
-//     color: rgb(199, 37, 37);
-//     font-weight: 900;
-//     text-shadow: $shadow $color_shadow;
-//   }
-
-//   .copy {
-//     font-size: 2.78vw;
-//     color: $black1;
-//     text-shadow: $shadow $color_shadow;
-//     margin: 15px 0;
-//   }
-
-//   .copy__active {
-//     font-weight: 700;
-//   }
-
-//   .link {
-//     display: inline-block;
-//     color: inherit;
-//     text-decoration: none;
-//     font-weight: 600;
-//     font-size: 1.8vw;
-//     padding: 9px;
-//   }
-
-//   .link:hover {
-//     color: red;
-//   }
-
-//   .link--active {
-//     color: $red;
-//     font-weight: 900;
-//   }
-
-//   .categories {
-//     display: flex;
-//     align-items: center;
-//     background: rgb(243, 235, 235);
-//     width: 100vw;
-//     border-radius: 1rem;
-//   }
-
-//   .close-sidebar {
-//     color: rgb(8, 8, 8);
-//     margin-left: 7rem;
-//   }
-// }
-
-// @media screen and (min-width: 768px) and (max-width: 833.99px) {
-//   .links {
-//     display: flex;
-//   }
-
-//   .nav__container {
-//     width: 100%;
-//     height: 8.5rem;
-//     background: rgba(255, 255, 255, 0.733);
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     display: flex;
-//     align-items: center;
-//     padding: 0;
-//   }
-// }
