--- a/src/component/Navabar/_Navbar.scss
+++ b/src/component/Navabar/_Navbar.scss
@@ -18,32 +18,40 @@ aside.open {
 }
 
 .open-sidebar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
-  width: 100%;
-  height: auto;
-  font-size: 4vw;
-  padding: 1rem;
+  width: 1rem;
+  height: 1rem;
+  font-size: 3.5rem;
   background: none;
   cursor: pointer;
   z-index: 1000;
-  margin: 1.5rem;
+  padding: 3rem;
+  background: rgb(211, 210, 210);
+  border-radius: 50%;
+  color: rgb(255, 254, 254);
+  margin-right: 2rem;
+  box-shadow: rgba(54, 54, 54, 0.17) 0px -23px 25px 0px inset,
+    rgba(116, 115, 115, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+    rgba(182, 182, 182, 0.06) 0px 2px 1px, rgba(22, 22, 22, 0.09) 0px 4px 2px,
+    rgba(105, 104, 104, 0.09) 0px 8px 4px, rgba(44, 43, 43, 0.09) 0px 16px 8px,
+    rgba(146, 145, 145, 0.09) 0px 32px 16px;
+
+  border: 1px solid rgb(255, 255, 255);
 }
 
 .open-sidebar:hover {
-  border: none;
-  color: rgb(146, 139, 139);
+  border: 1px solid rgb(255, 255, 255);
+  color: rgb(103, 102, 104);
 }
 
 aside ul {
   padding: 0;
   list-style: none;
 }
-
-// aside li {
-//   display: flex;
-//   justify-content: space-between;
-//   padding: 1rem;
-// }
 
 .close-sidebar {
   font-size: 1.6rem;
@@ -75,14 +83,6 @@ aside ul {
   padding: 0.7rem;
 }
 
-// .links {
-//   margin-right: 5rem;
-// }
-
-// .categories {
-//   flex-wrap: wrap;
-// }
-
 .container-links {
   position: relative;
   display: flex;
@@ -110,7 +110,7 @@ aside ul {
 
 .link:hover {
   height: 3.5rem;
-  background: rgb(240, 128, 37);
+  background: #9ec8f7;
   color: rgb(255, 255, 255);
   font-weight: 600;
   font-size: 1.2rem;
@@ -151,9 +151,9 @@ aside ul {
 
 // RESPONSIVE
 
-@media screen and (min-width: 270px) and (max-width: 600.98px) {
+@media screen and (min-width: 250px) and (max-width: 600.98px) {
   .container-links {
-    width: 22rem;
+    width: auto;
     height: 8rem;
     position: relative;
     display: flex;
@@ -176,6 +176,32 @@ aside ul {
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     border-radius: 5px;
     border: 2.5px solid rgb(156, 154, 154);
+    margin: 0.2rem;
+  }
+
+  .open-sidebar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    width: 0.1rem;
+    height: 0.1rem;
+    font-size: 1.6rem;
+    background: none;
+    cursor: pointer;
+    z-index: 1000;
+    padding: 1.3rem;
+    background: rgb(211, 210, 210);
+    border-radius: 50%;
+    color: white;
+    margin-right: 2rem;
+    box-shadow: rgba(54, 54, 54, 0.17) 0px -23px 25px 0px inset,
+      rgba(116, 115, 115, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(182, 182, 182, 0.06) 0px 2px 1px, rgba(22, 22, 22, 0.09) 0px 4px 2px,
+      rgba(105, 104, 104, 0.09) 0px 8px 4px, rgba(44, 43, 43, 0.09) 0px 16px 8px,
+      rgba(146, 145, 145, 0.09) 0px 32px 16px;
+    border: 1px solid rgb(243, 238, 238);
   }
 
   .close {
