--- a/src/component/Navabar/_Navbar.scss
+++ b/src/component/Navabar/_Navbar.scss
@@ -1,6 +1,5 @@
 .container {
   width: 100vw;
-  margin: 0 auto;
   overflow: hidden;
   height: auto;
 }
@@ -151,7 +150,7 @@ aside ul {
 
 // RESPONSIVE
 
-@media screen and (min-width: 250px) and (max-width: 600.98px) {
+@media (max-width: 290.98px) {
   .container-links {
     width: auto;
     height: 8rem;
@@ -160,23 +159,21 @@ aside ul {
     align-items: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 0rem;
+    padding-top: 4.2rem;
     background-color: #f7f7f7;
-    margin-top: 2.8rem;
   }
 
   .link {
-    width: 6.1rem;
-    height: 3rem;
+    width: 4rem;
+    height: 2.5rem;
     background: rgb(5, 86, 153);
     color: rgb(255, 255, 255);
     font-weight: 600;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     transition-duration: 0.6s;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     border-radius: 5px;
     border: 2.5px solid rgb(156, 154, 154);
-    margin: 0.2rem;
   }
 
   .open-sidebar {
@@ -209,7 +206,70 @@ aside ul {
       font-size: 1.5rem;
       color: rgb(7, 7, 7);
       position: absolute;
-      top: 0;
+      top: 40px;
+      right: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 291px) and (max-width: 600.98px) {
+  .container-links {
+    width: auto;
+    height: 8rem;
+    position: relative;
+    display: flex;
+    align-items: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-top: 4rem;
+    background-color: #f7f7f7;
+  }
+
+  .link {
+    width: 5.4rem;
+    height: 3rem;
+    background: rgb(5, 86, 153);
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    font-size: 0.8rem;
+    transition-duration: 0.6s;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    border-radius: 5px;
+    border: 2.5px solid rgb(156, 154, 154);
+    margin: 0.2rem;
+  }
+
+  .open-sidebar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    width: 0.1rem;
+    height: 0.1rem;
+    font-size: 1.6rem;
+    background: none;
+    cursor: pointer;
+    z-index: 1000;
+    padding: 1.6rem;
+    background: rgb(211, 210, 210);
+    border-radius: 50%;
+    color: white;
+    margin-right: 2rem;
+    box-shadow: rgba(54, 54, 54, 0.17) 0px -23px 25px 0px inset,
+      rgba(116, 115, 115, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(182, 182, 182, 0.06) 0px 2px 1px, rgba(22, 22, 22, 0.09) 0px 4px 2px,
+      rgba(105, 104, 104, 0.09) 0px 8px 4px, rgba(44, 43, 43, 0.09) 0px 16px 8px,
+      rgba(146, 145, 145, 0.09) 0px 32px 16px;
+    border: 1px solid rgb(243, 238, 238);
+  }
+
+  .close {
+    .close-sidebar {
+      font-size: 1.5rem;
+      color: rgb(7, 7, 7);
+      position: absolute;
+      top: 30px;
       right: 0;
     }
   }
