--- a/src/component/footer/_footer.scss
+++ b/src/component/footer/_footer.scss
@@ -3,15 +3,25 @@
 }
 
 .img__footer {
-  background: url(../img/v7.jpg); /* Chrome 10-25, Safari 5.1-6 */
-  background: url(../img/v7.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  // background: url(../img/v22.png); /* Chrome 10-25, Safari 5.1-6 */
+  // background: url(../img/v22.png); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
   object-fit: cover;
   height: auto;
   width: 100%;
-  backdrop-filter: blur(5px); /*El efecto de vidrio*/
+  background: #16222a; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #3a6073,
+    #16222a
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #3a6073,
+    #16222a
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 // .content__footer {
@@ -29,7 +39,8 @@
   color: #ffff;
   margin: auto;
   text-align: center;
-  backdrop-filter: blur(5px); /*El efecto de vidrio*/
+  // backdrop-filter: grayscale(1);
+  // background-color: rgba(0, 0, 0, 0.87);
   padding: 100px;
 }
 
@@ -44,18 +55,18 @@
 }
 
 .constainter-text {
-  min-width: 200px;
+  min-width: 600px;
   max-height: 350px;
   height: 100%;
   width: 30rem;
 }
 
 .seccion__footer-2 p {
-  line-height: 2rem;
+  line-height: 2.1rem;
   height: auto;
-  font-size: 1.5em;
+  font-size: 1.4rem;
   margin: 0;
-  font-weight: 900;
+  font-weight: 600;
 }
 
 .corection {
