--- a/src/component/main2/_main2.scss
+++ b/src/component/main2/_main2.scss
@@ -55,6 +55,8 @@
   font-family: sans-serif;
   font-weight: 900;
   font-size: 2.78vw;
+  color: rgb(221, 83, 83);
+  filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
 }
 
 // RESPONSIVE
