--- a/src/component/main3/_main3.scss
+++ b/src/component/main3/_main3.scss
@@ -1,20 +1,22 @@
 .projects {
   text-align: center;
-  background: rgb(241, 241, 241);
+  background: rgb(255, 255, 255);
+  margin-bottom: 5rem;
 }
 
 .subtitle {
   text-align: center;
-  padding-top: 12rem;
+  padding-top: 3em;
   font-family: sans-serif;
   font-weight: 900;
-  font-size: 2.78vw;
-  color: rgb(165, 1, 1);
+  font-size: 3.5rem;
+  color: rgb(221, 83, 83);
+  filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
 }
 
 .subtitle--modifier {
   text-align: center;
-  margin-bottom: 16px;
+  margin: 16px;
 }
 
 .copy__section {
@@ -34,16 +36,13 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-auto-rows: auto;
-  grid-gap: 1rem;
-  padding: 5rem;
 
   .card {
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
-      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
-      rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     border-radius: 10px;
     background: rgb(255, 255, 255);
     padding: 1rem;
+    margin: 1.1rem;
 
     .card-title {
       font-weight: bold;
@@ -51,7 +50,6 @@
 
     .card-description {
       text-align: justify;
-      font-size: 1em;
     }
 
     .container-button {
@@ -60,342 +58,380 @@
       align-items: center;
     }
 
+    .image-card {
+      margin: 2rem;
+      width: 50%;
+      height: auto;
+      margin-top: 50px;
+    }
+
     .product {
-      height: 3.5vh;
+      height: 5vh;
       width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: rgb(196, 0, 0);
+      background: rgb(13, 179, 190);
       font-weight: bold;
       color: #ffff;
-      border-radius: 3px;
+      border-radius: 10px;
       overflow: hidden;
+      box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+        rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+        rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+        rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+        rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+        rgba(0, 0, 0, 0.09) 0px 32px 16px;
     }
   }
 }
-
 // RESPONSIVE
 
-@media only screen and (max-width: 600px) {
-  .projects {
-    text-align: center;
-    background: rgb(241, 241, 241);
-    margin-bottom: 1.5rem;
-  }
+// @media only screen and (max-width: 600px) {
+//   .projects {
+//     text-align: center;
+//     background: rgb(241, 241, 241);
+//     margin-bottom: 1.5rem;
+//   }
 
-  .subtitle {
-    text-align: center;
-    padding-top: 5rem;
-    font-family: sans-serif;
-    font-weight: 900;
-    font-size: 1.8em;
-    color: rgb(165, 1, 1);
-  }
+//   .subtitle {
+//     text-align: center;
+//     padding-top: 5rem;
+//     font-family: sans-serif;
+//     font-weight: 900;
+//     font-size: 1.8em;
+//     color: rgb(165, 1, 1);
+//   }
 
-  .subtitle--modifier {
-    text-align: center;
-    margin-bottom: 16px;
-  }
+//   .subtitle--modifier {
+//     text-align: center;
+//     margin-bottom: 16px;
+//   }
 
-  .copy__section {
-    color: $black2;
-    font-size: 0.8em;
-    line-height: 32px;
-    margin-bottom: 60px;
-    font-weight: bold;
-  }
+//   .copy__section {
+//     color: $black2;
+//     font-size: 0.8em;
+//     line-height: 32px;
+//     margin-bottom: 60px;
+//     font-weight: bold;
+//   }
 
-  .copy__section--modifier {
-    text-align: center;
-    margin-bottom: 32px;
-  }
+//   .copy__section--modifier {
+//     text-align: center;
+//     margin-bottom: 32px;
+//   }
 
-  .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-auto-rows: auto;
-    grid-gap: 1rem;
-    margin: 0;
-    padding: 10px;
+//   .cards {
+//     display: grid;
+//     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+//     grid-auto-rows: auto;
+//     grid-gap: 1rem;
+//     margin: 0;
+//     padding: 10px;
 
-    .card {
-      box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
-        rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-        rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-      border-radius: 10px;
-      background: rgb(255, 255, 255);
+//     .card {
+//       box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+//         rgba(0, 0, 0, 0.23) 0px 3px 6px;
+//       border-radius: 10px;
+//       background: rgb(255, 255, 255);
 
-      .card-title {
-        font-weight: bold;
-      }
+//       .card-title {
+//         font-weight: bold;
+//       }
 
-      .card-description {
-        text-align: justify;
-        font-size: 0.8em;
-      }
+//       .card-description {
+//         text-align: justify;
+//         font-size: 0.8em;
+//       }
 
-      .container-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
+//       .container-button {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//       }
+//       .image-card {
+//         margin: 2rem;
+//         width: 12rem;
+//         height: auto;
+//         margin-top: 50px;
+//       }
 
-      .product {
-        height: 2.5vh;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: rgb(196, 0, 0);
-        font-weight: bold;
-        color: #ffff;
-        border-radius: 3px;
-        padding: 20px;
-      }
-    }
-  }
-}
+//       .product {
+//         height: 2.5vh;
+//         width: 100%;
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         background: rgb(97, 163, 172);
+//         font-weight: bold;
+//         color: #ffff;
+//         border-radius: 3px;
+//         padding: 20px;
+//       }
+//     }
+//   }
+// }
 
-@media only screen and (min-width: 600px) {
-  .projects {
-    text-align: center;
-    background: rgb(241, 241, 241);
-    margin-bottom: 1.5rem;
-  }
+// @media only screen and (min-width: 600px) {
+//   .projects {
+//     text-align: center;
+//     background: rgb(241, 241, 241);
+//     margin-bottom: 0.5rem;
+//   }
 
-  .subtitle {
-    text-align: center;
-    padding-top: 5rem;
-    font-family: sans-serif;
-    font-weight: 900;
-    font-size: 1.8em;
-    color: rgb(165, 1, 1);
-  }
+//   .subtitle {
+//     text-align: center;
+//     padding-top: 5rem;
+//     font-family: sans-serif;
+//     font-weight: 900;
+//     font-size: 1.8em;
+//     color: rgb(165, 1, 1);
+//   }
 
-  .subtitle--modifier {
-    text-align: center;
-    margin-bottom: 16px;
-  }
+//   .subtitle--modifier {
+//     text-align: center;
+//     margin-bottom: 16px;
+//   }
 
-  .copy__section {
-    color: $black2;
-    font-size: 0.8em;
-    line-height: 32px;
-    margin-bottom: 60px;
-    font-weight: bold;
-    padding-top: -1rem;
-  }
+//   .copy__section {
+//     color: $black2;
+//     font-size: 0.8em;
+//     line-height: 32px;
+//     margin-bottom: 60px;
+//     font-weight: bold;
+//     padding-top: -1rem;
+//   }
 
-  .copy__section--modifier {
-    text-align: center;
-    margin-bottom: 32px;
-  }
+//   .copy__section--modifier {
+//     text-align: center;
+//     margin-bottom: 32px;
+//   }
 
-  .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: auto;
-    grid-gap: 1rem;
-    margin: 0;
-    padding: 10px;
+//   .cards {
+//     display: grid;
+//     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+//     grid-auto-rows: auto;
+//     grid-gap: 1rem;
+//     margin: 0;
+//     padding: 10px;
 
-    .card {
-      box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
-        rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-        rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-      border-radius: 10px;
-      background: rgb(255, 255, 255);
+//     .card {
+//       box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+//         rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+//         rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+//       border-radius: 10px;
+//       background: rgb(255, 255, 255);
 
-      .card-title {
-        font-weight: bold;
-      }
+//       .card-title {
+//         font-weight: bold;
+//       }
 
-      .card-description {
-        text-align: justify;
-        font-size: 0.8em;
-      }
+//       .card-description {
+//         text-align: justify;
+//         font-size: 0.8em;
+//       }
 
-      .container-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
+//       .container-button {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//       }
 
-      .product {
-        height: 2.5vh;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: rgb(196, 0, 0);
-        font-weight: bold;
-        color: #ffff;
-        border-radius: 3px;
-        padding: 20px;
-      }
-    }
-  }
-}
+//       .image-card {
+//         margin: 2rem;
+//         width: 12rem;
+//         height: auto;
+//         margin-top: 50px;
+//       }
 
-@media only screen and (min-width: 768px) {
-  .projects {
-    text-align: center;
-    background: rgb(241, 241, 241);
-    margin-bottom: 1.5rem;
-  }
+//       .product {
+//         height: 2.5vh;
+//         width: 100%;
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         background: rgb(97, 163, 172);
+//         font-weight: bold;
+//         color: #ffff;
+//         border-radius: 3px;
+//         padding: 20px;
+//       }
+//     }
+//   }
+// }
 
-  .subtitle {
-    text-align: center;
-    padding-top: 8rem;
-    font-family: sans-serif;
-    font-weight: 900;
-    font-size: 2.8em;
-    color: rgb(165, 1, 1);
-  }
+// @media only screen and (min-width: 768px) {
+//   .projects {
+//     text-align: center;
+//     background: rgb(241, 241, 241);
+//     margin-bottom: 1.5rem;
+//   }
 
-  .subtitle--modifier {
-    text-align: center;
-    margin-bottom: 16px;
-  }
+//   .subtitle {
+//     text-align: center;
+//     padding-top: 8rem;
+//     font-family: sans-serif;
+//     font-weight: 900;
+//     font-size: 2.8em;
+//     color: rgb(165, 1, 1);
+//   }
 
-  .copy__section {
-    color: $black2;
-    font-size: 1.5em;
-    line-height: 32px;
-    margin-bottom: 60px;
-    font-weight: bold;
-    padding-top: -1rem;
-  }
+//   .subtitle--modifier {
+//     text-align: center;
+//     margin-bottom: 16px;
+//   }
 
-  .copy__section--modifier {
-    text-align: center;
-    margin-bottom: 32px;
-  }
+//   .copy__section {
+//     color: $black2;
+//     font-size: 1.5em;
+//     line-height: 32px;
+//     margin-bottom: 60px;
+//     font-weight: bold;
+//     padding-top: -1rem;
+//   }
 
-  .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: auto;
-    grid-gap: 1rem;
-    margin: 0;
-    padding: 10px;
+//   .copy__section--modifier {
+//     text-align: center;
+//     margin-bottom: 32px;
+//   }
 
-    .card {
-      box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
-        rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-        rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-      border-radius: 10px;
-      background: rgb(255, 255, 255);
+//   .cards {
+//     display: grid;
+//     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+//     grid-auto-rows: auto;
+//     grid-gap: 1rem;
+//     margin: 0;
+//     padding: 10px;
 
-      .card-title {
-        font-weight: bold;
-      }
+//     .card {
+//       box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+//         rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+//         rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+//       border-radius: 10px;
+//       background: rgb(255, 255, 255);
 
-      .card-description {
-        text-align: justify;
-        font-size: 0.9em;
-      }
+//       .card-title {
+//         font-weight: bold;
+//       }
 
-      .container-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
+//       .card-description {
+//         text-align: justify;
+//         font-size: 0.9em;
+//       }
 
-      .product {
-        height: 2.5vh;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: rgb(196, 0, 0);
-        font-weight: bold;
-        color: #ffff;
-        border-radius: 3px;
-        padding: 20px;
-      }
-    }
-  }
-}
+//       .container-button {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//       }
 
-@media only screen and (min-width: 992px) {
-  .projects {
-    text-align: center;
-    background: rgb(241, 241, 241);
-    margin-bottom: 1.5rem;
-  }
+//       .image-card {
+//         margin: 2rem;
+//         width: 12rem;
+//         height: auto;
+//         margin-top: 50px;
+//       }
 
-  .subtitle {
-    text-align: center;
-    padding-top: 8rem;
-    font-family: sans-serif;
-    font-weight: 900;
-    font-size: 2.8em;
-    color: rgb(165, 1, 1);
-  }
+//       .product {
+//         height: 2.5vh;
+//         width: 100%;
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         background: rgb(97, 163, 172);
+//         font-weight: bold;
+//         color: #ffff;
+//         border-radius: 3px;
+//         padding: 20px;
+//       }
+//     }
+//   }
+// }
 
-  .subtitle--modifier {
-    text-align: center;
-    margin-bottom: 16px;
-  }
+// @media only screen and (min-width: 992px) {
+//   .projects {
+//     text-align: center;
+//     background: rgb(241, 241, 241);
+//     margin-bottom: 1.5rem;
+//   }
 
-  .copy__section {
-    color: $black2;
-    font-size: 1.5em;
-    line-height: 32px;
-    margin-bottom: 60px;
-    font-weight: bold;
-    padding-top: -1rem;
-  }
+//   .subtitle {
+//     text-align: center;
+//     padding-top: 8rem;
+//     font-family: sans-serif;
+//     font-weight: 900;
+//     font-size: 2.8em;
+//     color: rgb(165, 1, 1);
+//   }
 
-  .copy__section--modifier {
-    text-align: center;
-    margin-bottom: 32px;
-  }
+//   .subtitle--modifier {
+//     text-align: center;
+//     margin-bottom: 16px;
+//   }
 
-  .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-    grid-auto-rows: auto;
-    grid-gap: 1rem;
-    margin: 0;
-    padding: 10px;
+//   .copy__section {
+//     color: $black2;
+//     font-size: 1.5em;
+//     line-height: 32px;
+//     margin-bottom: 60px;
+//     font-weight: bold;
+//     padding-top: -1rem;
+//   }
 
-    .card {
-      box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
-        rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-        rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-      border-radius: 10px;
-      background: rgb(255, 255, 255);
+//   .copy__section--modifier {
+//     text-align: center;
+//     margin-bottom: 32px;
+//   }
 
-      .card-title {
-        font-weight: bold;
-      }
+//   .cards {
+//     display: grid;
+//     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+//     grid-auto-rows: auto;
+//     grid-gap: 1rem;
+//     margin: 0;
+//     padding: 10px;
 
-      .card-description {
-        text-align: justify;
-        font-size: 0.9em;
-      }
+//     .card {
+//       box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px,
+//         rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+//         rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+//       border-radius: 10px;
+//       background: rgb(255, 255, 255);
 
-      .container-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
+//       .card-title {
+//         font-weight: bold;
+//       }
 
-      .product {
-        height: 2.5vh;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: rgb(196, 0, 0);
-        font-weight: bold;
-        color: #ffff;
-        border-radius: 3px;
-        padding: 20px;
-      }
-    }
-  }
-}
+//       .card-description {
+//         text-align: justify;
+//         font-size: 0.9em;
+//       }
+
+//       .container-button {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//       }
+
+//       .image-card {
+//         margin: 2rem;
+//         width: 12rem;
+//         height: auto;
+//         margin-top: 50px;
+//       }
+
+//       .product {
+//         height: 2.5vh;
+//         width: 100%;
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         background: rgb(97, 163, 172);
+//         font-weight: bold;
+//         color: #ffff;
+//         border-radius: 3px;
+//         padding: 20px;
+//       }
+//     }
+//   }
+// }
