--- a/src/component/nosotros/nosotros.scss
+++ b/src/component/nosotros/nosotros.scss
@@ -5,7 +5,7 @@
   padding: 0;
 
   img {
-    width: 30vw;
+    width: 20vw;
     display: flex;
     margin: auto;
   }
@@ -13,13 +13,14 @@
   .containerText {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     margin: auto;
     width: 60vw;
+    padding-bottom: 10rem;
+    text-align: justify;
 
     h1 {
       margin-top: 15px;
-      text-align: justify;
-      font-size: 1.5vw;
     }
   }
   .linkNosotros {
@@ -50,13 +51,15 @@
     .containerText {
       display: flex;
       justify-content: center;
+      text-align: justify;
       margin: auto;
-      width: 60vw;
+      width: 80vw;
+      padding-bottom: 3rem;
 
       h1 {
         margin-top: 20px;
         text-align: justify;
-        font-size: 2.5vw;
+        font-size: 5vw;
       }
     }
     .linkNosotros {
@@ -86,13 +89,15 @@
     .containerText {
       display: flex;
       justify-content: center;
+      text-align: justify;
       margin: auto;
-      width: 60vw;
+      width: 80vw;
+      padding-bottom: 3rem;
 
       h1 {
         margin-top: 20px;
         text-align: justify;
-        font-size: 2.5vw;
+        font-size: 5vw;
       }
     }
     .linkNosotros {
@@ -122,13 +127,15 @@
     .containerText {
       display: flex;
       justify-content: center;
+      text-align: justify;
       margin: auto;
-      width: 60vw;
+      width: 80vw;
+      padding-bottom: 3rem;
 
       h1 {
         margin-top: 20px;
         text-align: justify;
-        font-size: 2.5vw;
+        font-size: 5vw;
       }
     }
     .linkNosotros {
@@ -158,13 +165,15 @@
     .containerText {
       display: flex;
       justify-content: center;
+      text-align: justify;
       margin: auto;
-      width: 60vw;
+      width: 80vw;
+      padding-bottom: 3rem;
 
       h1 {
         margin-top: 20px;
         text-align: justify;
-        font-size: 2.5vw;
+        font-size: 5vw;
       }
     }
     .linkNosotros {
