--- a/src/component/main3/_main3.scss
+++ b/src/component/main3/_main3.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  background: #aac2ce;
+  background: #e5e6dd;
   height: auto;
   padding-bottom: 6rem;
 }
@@ -15,7 +15,7 @@
   font-family: sans-serif;
   font-weight: 900;
   font-size: 3.5rem;
-  color: rgb(221, 83, 83);
+  color: rgb(199, 22, 22);
   filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
 }
 
